--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v2 # checkout the repository content
       - name: setup Python
         uses: actions/setup-python@v5.1.0
+      - name: install pyinstaller
+        run: pip install pyinstaller
       - name: install requirements
         run: pip install -r requirements.txt
       - name: build
